--- a/css/about.css
+++ b/css/about.css
@@ -1,127 +1,130 @@
 body {
-    margin: 0 auto;
-    background-image: url(../image/about_1.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-attachment: fixed;
+  margin: 0 auto;
+  background-image: url(../image/about_1.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
 }
 
 .top {
-    width: 100%;
-    margin: 0 auto;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 10;
+  width: 100%;
+  top: 0%;
+  position: fixed;
+  z-index: 10;
 }
-
 
 /*meun basic*/
 
 nav {
-    margin-top: -16px;
-    background: black;
-    justify-content: space-between;
+  background: black;
+  justify-content: space-between;
+  overflow: scroll;
 }
 
 nav ul {
-    list-style-type: none;
-    padding: 0px;
-    /*flex*/
-    display: flex;
-    flex-wrap: wrap;
+  list-style-type: none;
+  display: flex;
+  /* flex-direction: row;
     justify-content: center;
+    align-items: center; */
+  padding: 0;
+  margin: 0;
 }
 
 nav a {
-    text-decoration: none;
-    text-align: center;
-    color: #fff;
-    display: block;
-    padding: 10px 30px 10px 30px;
-    font-family: 'Poiret One', cursive;
-    font-size: 18px;
+  text-decoration: none;
+  color: #fff;
+  display: block;
+  padding: 2vh 3vh;
+  font-family: "Poiret One", cursive;
+  font-size: 2.5vh;
 }
 
 nav a:hover {
-    background-color: #555;
-    text-decoration: none;
-    color: white;
+  background-color: #555;
+  text-decoration: none;
+  color: white;
 }
 
 .container {
-    position: relative;
-    margin: 150px 0 auto 0;
-    width: 100%;
-    height: 500px;
-    /*        background-color: rgba(255, 255, 255, 0.44);*/
-    left: 0;
-    right: 0;
+  position: relative;
+  margin: 150px 0 auto 0;
+  width: 100%;
+  height: 500px;
+  /*        background-color: rgba(255, 255, 255, 0.44);*/
+  left: 0;
+  right: 0;
 }
 
 .h1 {
-    width: 230px;
-    height: 100px;
-    /*    background-color: #b9b9b9;*/
-    font-size: 80px;
-    font-family: 'Limelight', cursive;
-    margin-left: 800px;
-    /*    writing-mode:vertical-lr;*/
-    color: white;
+  width: 230px;
+  height: 100px;
+  /*    background-color: #b9b9b9;*/
+  font-size: 80px;
+  font-family: "Limelight", cursive;
+  margin-left: 800px;
+  /*    writing-mode:vertical-lr;*/
+  color: white;
 }
 
 .gifbox {
-    margin: 0 auto;
-    width: 900px;
-    height: 380px;
-    background-color: rgba(255, 255, 255, 0.66);
-    border-radius: 0.5em;
+  margin: 0 auto;
+  width: 900px;
+  height: 380px;
+  background-color: rgba(255, 255, 255, 0.66);
+  border-radius: 0.5em;
 }
 
 .gifbox img {
-    margin-top: 65px;
-    border-radius: 1em;
-    width: 200px;
-    float: left;
-    margin-left: 75px;
-    /*    height: */
+  margin-top: 65px;
+  border-radius: 1em;
+  width: 200px;
+  float: left;
+  margin-left: 75px;
+  /*    height: */
 }
 
 .imgfont {
-    margin: 0 auto;
-    width: 900px;
-    color: #464646;
-    font-size: 20px;
-    font-weight: bold;
-    font-family: 'Bubbler One', sans-serif;
+  margin: 0 auto;
+  width: 900px;
+  color: #464646;
+  font-size: 20px;
+  font-weight: bold;
+  font-family: "Bubbler One", sans-serif;
 }
 
 .font {
-    width: 200px;
-    height: 100px;
-    padding-top: 10px;
-    text-align: center;
-    float: left;
+  width: 200px;
+  height: 100px;
+  padding-top: 10px;
+  text-align: center;
+  float: left;
 }
 
 .font1 {
-    margin-left: 75px;
-    margin-right: 15px;
+  margin-left: 75px;
+  margin-right: 15px;
 }
 
 .font2 {
-    margin-left: 60px;
-    margin-right: 15px;
+  margin-left: 60px;
+  margin-right: 15px;
 }
 
 .font3 {
-    margin-left: 60px;
-    margin-right: 15px;
+  margin-left: 60px;
+  margin-right: 15px;
 }
 
 a {
-    text-decoration: none;
-    color: #464646;
+  text-decoration: none;
+  color: #464646;
+}
+@media screen and (min-width: 768px) {
+  nav ul {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 }
