--- a/css/activity.css
+++ b/css/activity.css
@@ -1,131 +1,134 @@
-body{
-    margin: auto 0;
-    text-align: center;
+body {
+  margin: auto 0;
+  text-align: center;
 }
 
-.top{
-    width:100%;
-    margin:0 auto;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 10;
-
+.top {
+  width: 100%;
+  top: 0%;
+  position: fixed;
+  z-index: 10;
 }
+
 /*meun basic*/
 
-nav{
-    background: black;
-    justify-content: space-between;
-    margin-top: -2px;
+nav {
+  background: black;
+  justify-content: space-between;
+  overflow: scroll;
 }
-nav ul{
-    list-style-type: none;
-    padding: 0px;
-    /*flex*/
-    display: flex;
-    flex-wrap:wrap;
-    justify-content: center;
-    
+
+nav ul {
+  list-style-type: none;
+  display: flex;
+  /* flex-direction: row;
+  justify-content: center;
+  align-items: center; */
+  padding: 0;
+  margin: 0;
 }
+
 nav a {
-    text-decoration: none;
-    text-align: center;
-    color: #fff;
-    display: block;
-    padding:10px 30px 10px 30px;
-    font-family: 'Poiret One', cursive;
-    font-size: 18px;
-}
-nav a:hover{
-    background-color: #555;
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: #fff;
+  display: block;
+  padding: 2vh 3vh;
+  font-family: "Poiret One", cursive;
+  font-size: 2.5vh;
 }
 
-.top_pic{
-    height: 400px;
-    
+nav a:hover {
+  background-color: #555;
+  text-decoration: none;
+  color: white;
 }
 
-#p1{
-    font-family: 'Limelight', cursive;
-    font-size: 60px;
-     margin-top: 50px;
-}
-.top_word{
-    margin: auto;
-    text-align: center;
-    margin-top: -50px;
-    width: 900px;
-    background-color: white;
-    padding: 5px;
-    
+.top_pic {
+  height: 40vh;
 }
 
-.second_word{
-    width: 1000px;
-    height: 3000px;
-     margin: auto;
-    text-align: center;
-    margin-top: 80px;
+#p1 {
+  font-family: "Limelight", cursive;
+  font-size: 4em;
+  margin-top: 6vh;
 }
-.imgsss{
-    width:800px;
-}
-.littlefont{
-    font-family: 'Poiret One', cursive;
-    font-size: 20px;
-    margin-bottom: -15px;
-}
-.bigfont{
-    font-family: 'Poiret One', cursive;
-    font-size: 40px;
-}
-.midfont{
-    font-family: 'Croissant One', cursive;
-    font-size: 20px;
-    margin-bottom: -2px;
-    color: rgba(115, 170, 123, 0.69);
-}
-.picword{
-    margin-bottom: 50px;
-}
-.mid_2font{
-    background-color: white;
-    padding: 5px;
-    width: 1000px;
-    margin: auto;
-}
-.mid_2font p{
-    color: black;
-    font-family: 'Alegreya Sans SC', cursive;
-    font-size:100px;
-    margin-top: 50px;
-    text-shadow: 3px 3px 3px #cccccc;
-    background-color: white;
-    margin-top: -350px
+.top_word {
+  margin: auto;
+  text-align: center;
+  margin-top: -6vh;
+  width: 80%;
+  background-color: white;
+  padding: 1vh;
 }
 
-.mid_2font a{
-    text-decoration: none;
+.second_word {
+  width: 100%;
+  /* height: 3000px; */
+  /* margin: auto; */
+  /* text-align: center; */
+  margin-top: 10vh;
 }
-.mid_2font a:hover{
-    text-decoration: none;
+.imgsss {
+  width: 80%;
 }
-.mid_2font a:hover p{
-    color: rgba(19, 20, 21, 0.52);   
+.littlefont {
+  font-family: "Poiret One", cursive;
+  font-size: 3vh;
+  margin-bottom: -1vh;
 }
-.last_pic{
-    height: 450px;
-    margin-top: -120px;
+.bigfont {
+  font-family: "Poiret One", cursive;
+  font-size: 5vh;
+}
+.midfont {
+  font-family: "Croissant One", cursive;
+  font-size: 3vh;
+  margin-bottom: -1vh;
+  color: rgba(115, 170, 123, 0.69);
+}
+.picword {
+  margin-bottom: 5vh;
+}
+.mid_2font {
+  background-color: white;
+  width: 90%;
+  margin: auto;
+}
+.mid_2font p {
+  color: black;
+  font-family: "Alegreya Sans SC", cursive;
+  font-size: 100px;
+  margin-top: 50px;
+  text-shadow: 3px 3px 3px #cccccc;
+  background-color: white;
+  margin-top: -350px;
+}
 
+.mid_2font a {
+  text-decoration: none;
 }
-.font{
-    font-family: 'Poiret One', cursive;
-    font-size:20px;
-    margin-top: 5px;
-    width: 800px;
-    margin: auto;
+.mid_2font a:hover {
+  text-decoration: none;
+}
+.mid_2font a:hover p {
+  color: rgba(19, 20, 21, 0.52);
+}
+.last_pic {
+  height: 50vh;
+  background-image: url(image/activity_top_02.jpg);
+  margin-top: 5vh;
+}
+.font {
+  font-family: "Poiret One", cursive;
+  font-size: 2em;
+  /* margin-top: 5px; */
+  width: 80%;
+  margin: auto;
+}
+@media screen and (min-width: 768px) {
+  nav ul {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 }
