--- a/css/home.css
+++ b/css/home.css
@@ -1,399 +1,426 @@
 body {
-    background-color: #fdfdfd;
+  background-color: #fdfdfd;
+  margin: 0;
 }
 
 .top {
-    width: 100%;
-    margin: 0 auto;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 10;
+  width: 100%;
+  top: 0%;
+  position: fixed;
+  z-index: 10;
 }
-
 
 /*meun basic*/
 
 nav {
-    margin-top: -16px;
-    background: black;
-    justify-content: space-between;
+  background: black;
+  justify-content: space-between;
+  overflow: scroll;
 }
 
 nav ul {
-    list-style-type: none;
-    padding: 0px;
-    /*flex*/
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+  list-style-type: none;
+  display: flex;
+  /* flex-direction: row;
+  justify-content: center;
+  align-items: center; */
+  padding: 0;
+  margin: 0;
 }
 
 nav a {
-    text-decoration: none;
-    text-align: center;
-    color: #fff;
-    display: block;
-    padding: 10px 30px 10px 30px;
-    font-family: 'Poiret One', cursive;
-    font-size: 18px;
+  text-decoration: none;
+  color: #fff;
+  display: block;
+  padding: 2vh 3vh;
+  font-family: "Poiret One", cursive;
+  font-size: 2.5vh;
 }
 
 nav a:hover {
-    background-color: #555;
-    text-decoration: none;
-    color: white;
+  background-color: #555;
+  text-decoration: none;
+  color: white;
 }
-
 
 /*logo position*/
 
 .logo-pos {
-    width: 100%;
-    margin-top: 3%;
-    position: absolute;
-    display: flex;
+  width: 100%;
+  margin-top: 3%;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .logo-pos img {
-    margin: 0 auto;
-    width: 20%;
-    height: 100%;
-    margin-top: 85px;
+  margin: 0 auto;
+  width: 20%;
+  height: 100%;
+  margin-top: 10vh;
 }
-
 
 /* Slideshow container */
 
 .slideshow-container {
-    position: relative;
-    margin-top: -16px;
+  position: relative;
+  margin-top: -16px;
 }
 
 .mySlides {
-    display: none;
-    width: 100%;
+  display: none;
+  width: 100%;
 }
-
 
 /* Next & previous buttons */
 
 .prev,
 .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    margin-top: -22px;
-    padding: 16px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
 }
-
 
 /* Position the "next button" to the right */
 
 .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
+  right: 0;
+  border-radius: 3px 0 0 3px;
 }
-
 
 /* On hover, add a black background color with a little bit see-through */
 
 .prev:hover,
 .next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.8);
 }
-
 
 /* Number text (1/3 etc) */
 
 .numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
 }
-
 
 /* The dots/bullets/indicators */
 
 .dot {
-    cursor: pointer;
-    height: 13px;
-    width: 13px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
+  cursor: pointer;
+  height: 13px;
+  width: 13px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
 }
 
 .active,
 .dot:hover {
-    background-color: #717171;
+  background-color: #717171;
 }
-
 
 /* Fading animation */
 
 .fade {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.5s;
-    animation-name: fade;
-    animation-duration: 1.5s;
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
 }
 
 @-webkit-keyframes fade {
-    from {
-        opacity: .4
-    }
-    to {
-        opacity: 1
-    }
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes fade {
-    from {
-        opacity: .4
-    }
-    to {
-        opacity: 1
-    }
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .para {
-    max-width: 680px;
-    margin: 0 auto;
+  max-width: 60%;
+  margin: 0 auto;
 }
 
 .circles-container {
-    max-width: 1080px;
-    height: 500px;
-    margin: 50px auto;
-    margin-bottom: 50px;
-    background-color: #8E8E8E；
+  /* width: 80%; */
+  /* height: 60vh; */
+  margin: 50px auto;
+  margin-bottom: 50px;
+  background-color: rgba(185, 229, 187, 0.57);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
-.circles-container ul {
-    background-color: rgba(185, 229, 187, 0.57);
-    margin: 0;
-    padding: 0;
-    position: absolute;
+.circlesDiv {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5vh;
 }
-
-.circles-container li {
-    list-style: none;
-    float: left;
-    margin: 20px;
+.circlesDiv img {
+  width: 20vh;
 }
-
-.circles-container img {
-    width: 200px;
-    height: 200px;
+.circlesDiv p {
+  overflow: scroll;
 }
-
-.circles-container table {
-    width: 200px;
-    height: auto;
-}
-
-.circles-container table td {
-    margin-left: 40px;
-}
-
-
-/*press*/
 
 #div_table {
-    width: 800px;
-    height: 500px;
-    margin: 50px 500px 50px 300px;
-    margin: 0 auto;
+  width: 80%;
+  height: 35vh;
+  margin: 0 auto;
 }
 
 .font {
-    font-family: 'Work Sans', cursive;
-    font-size: 20px;
-    margin: 0 auto;
-    float: left;
+  font-family: "Work Sans", cursive;
+  font-size: 20px;
+  margin: 0 auto;
+  float: left;
 }
 
 .div1 {
-    display: inline;
-    width=100px;
-    margin: 50px auto 0 auto;
+  display: inline;
+  /* width: 100px; */
+  margin: 50px auto 0 auto;
 }
-
 
 /*about*/
 
 .text1 {
-    list-style: none;
-    display: inline;
-    float: left;
-    text-align: left;
-    font-family: 'Work Sans', cursive;
-    font-size: 18px;
-    width: 400px;
-    height: 450px;
-    margin-top: 20px;
-    margin-left: 20px;
-    margin-right: 20px
+  list-style: none;
+  display: inline;
+  float: left;
+  text-align: left;
+  font-family: "Work Sans", cursive;
+  font-size: 18px;
+  width: 400px;
+  height: 450px;
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .text2 {
-    list-style: none;
-    text-align: left;
-    display: inline;
-    float: left;
-    width: 400px;
-    height: 450px;
-    font-family: 'Work Sans', cursive;
-    font-size: 18px;
-    margin-left: 5px;
-    margin-top: 20px;
+  list-style: none;
+  text-align: left;
+  display: inline;
+  float: left;
+  width: 400px;
+  height: 450px;
+  font-family: "Work Sans", cursive;
+  font-size: 18px;
+  margin-left: 5px;
+  margin-top: 20px;
 }
 
 .line {
-    list-style: none;
-    display: inline;
-    float: left;
-    background-color: black;
-    width: 1px;
-    height: 445px;
-    margin-top: 15px;
-    margin-right: 20px;
+  list-style: none;
+  display: inline;
+  float: left;
+  background-color: black;
+  width: 1px;
+  height: 445px;
+  margin-top: 15px;
+  margin-right: 20px;
 }
 
 .about {
-    text-align: center;
-    display: block;
-    margin: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+  margin: 2vh 15vh;
+}
+.aboutWord {
+  width: 100%;
+  font-family: "Work Sans", cursive;
+  font-size: 1em;
+  margin: 1vh;
+  text-align: left;
 }
 
 #about_background {
-    background-color: rgba(222, 184, 135, 0.57);
-    width: 950px;
-    margin: auto;
-    height: 1200px;
-    margin-top: 50px;
+  background-color: rgba(222, 184, 135, 0.57);
+  width: 90%;
+  margin: auto;
+  height: 100%;
+  margin-top: 10vh;
+}
+#about_title {
+  font-family: "Limelight", cursive;
+  font-size: 10vh;
+  margin-top: -3vh;
+  margin-bottom: 1vh;
 }
 
-
+#about {
+  text-align: center;
+  display: block;
+  margin: auto;
+}
 /*contact*/
 
 .d1 {
-    background-color: beige;
-    height: 235px;
-    text-align: center;
-    margin-top:
+  background-color: beige;
+  height: 235px;
+  text-align: center;
 }
 
 .d1 img {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 .d2 {
-    height: 32px;
-    background-color: rgba(220, 203, 181, 0.68);
-    text-align: center;
-    display: block;
-    margin-bottom: 5px;
-    font-size: 8px;
-    font-family: 'Work Sans', cursive;
+  height: 5vh;
+  background-color: rgba(220, 203, 181, 0.68);
+  text-align: center;
+  font-size: 2vh;
+  font-family: "Work Sans", cursive;
 }
 
 .contact_icon {
-    max-width: 100px;
-    margin: 0 auto;
+  max-width: 100px;
+  margin: 0 auto;
 }
 
 .contact_icon ul {
-    padding: 0;
-    position: absolute;
-    margin-top: 5px;
+  padding: 0;
+  position: absolute;
+  margin-top: 5px;
 }
 
 .contact_icon li {
-    margin-bottom: 4px;
-    list-style: none;
-    max-width: 0px;
+  margin-bottom: 4px;
+  list-style: none;
+  max-width: 0px;
 }
 
 .contact_icon span {
-    font-size: 10px;
-    font-family: 'Work Sans', cursive;
-    margin-left: 5px;
+  font-size: 10px;
+  font-family: "Work Sans", cursive;
+  margin-left: 5px;
 }
 
 #activity_word {
-    font-size: 80px;
-    text-align: center;
-    font-family: 'Limelight', cursive;
-    margin-bottom: -20px;
+  font-size: 4em;
+  text-align: center;
+  font-family: "Limelight", cursive;
+  margin-bottom: -2vh;
 }
 
 #activity {
-    border: 0;
-    height: 0px;
-    background-color: #d4d4d4;
+  border: 0;
+  height: 0px;
+  background-color: #d4d4d4;
 }
 
 #said {
-    font-family: 'Limelight', cursive;
-    text-align: center;
-    font-size: 100px;
-    color: #e5c496;
-    padding-top: 10px;
+  font-family: "Limelight", cursive;
+  text-align: center;
+  font-size: 3em;
+  color: #e5c496;
+  padding-top: 1vh;
 }
 
 #lovers {
-    font-family: 'Open Sans', sans-serif;
-    text-align: center;
-    font-size: 20px;
-    color: #9f9f9f;
-    margin-top: -50px;
-    font-weight: bold;
+  font-family: "Open Sans", sans-serif;
+  text-align: center;
+  font-size: 1.5vh;
+  color: #9f9f9f;
+  margin-top: -5vh;
+  font-weight: bold;
 }
 
 #replies {
-    background-image: url(../image/customers_bg2.jpg);
-    height: 900px;
+  background-image: url(../image/customers_bg2.jpg);
+  height: 100%;
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.grayDiv {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.grayDiv div {
+  width: 35vh;
+  height: 20vh;
+  background-color: rgba(201, 201, 201, 0.58);
+  padding: 1vh;
+  overflow: scroll;
+  margin-bottom: 3vh;
+}
+
+.grayDiv p {
+  font-size: 1em;
+  padding: 0 1vh;
+  font-family: "Open Sans", sans-serif;
+  font-weight: bold;
+}
+.noSide {
+}
+.BBQ {
+  text-align: center;
+  font-family: "Limelight", cursive;
+  font-size: 3em;
+}
+@media screen and (max-width: 800px) {
+  .grayDiv div {
+    width: 13vh;
+  }
+  .circles-container {
+    flex-direction: column;
+  }
+  .about {
+    flex-direction: column;
+    margin: 2vh 7vh;
+  }
+  .logo-pos {
     width: 100%;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-#replies ul {
-    /*    background-color: aliceblue;*/
-    width: 1230px;
+    margin-top: 25%;
+  }
+  .noSide {
+    display: none;
+  }
+  .BBQ {
+    margin-top: 65%;
+  }
+  /* nav ul {
     padding: 0;
-    list-style: none;
-    display: flex;
-    margin: auto;
+  } */
 }
-
-#replies ul li div {
-    width: 300px;
-    background-color: rgba(201, 201, 201, 0.58);
-    padding: 20px;
-    margin-left: 50px;
-    vertical-align: middle;
-}
-
-#replies ul p {
-    font-size: 18px;
-    padding-left: 20px;
-    padding-right: 20px;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: bold;
+@media screen and (min-width: 768px) {
+  nav ul {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 }
