--- a/css/index.css
+++ b/css/index.css
@@ -1,91 +1,127 @@
 body {
-    background-image: url(../image/bg-img.jpg);
-    width: 100%;
-    background-repeat: no-repeat;
+  background-image: url(../image/bg-img.jpg);
+  /* width: 100%; */
+  background-repeat: no-repeat;
 }
 
 p {
-    text-align: center;
-    padding-top: 23px;
-    font-family: 'Limelight', cursive;
+  text-align: center;
+  padding-top: 3vh;
+  font-family: "Limelight", cursive;
+  font-size: 2vh;
 }
 
 a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 #i {
-    font-size: 40px;
-    margin-bottom: 1.25px;
+  font-size: 40px;
+  margin-bottom: 1.25px;
 }
 
 ul {
-    list-style-type: none;
-    display: flex;
+  list-style-type: none;
+  display: flex;
+  padding: 0;
 }
 
 .pink {
-    background-color: rgb(255, 209, 209);
+  background-color: rgb(255, 209, 209);
 }
 
 .white {
-    background-color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(255, 255, 255, 0.6);
 }
 
 .yellow {
-    background-color: rgb(255, 238, 153);
+  background-color: rgb(255, 238, 153);
 }
 
 .wrapper {
-    max-width: 980px;
+  /* max-width: 980px;
     margin: 0px auto 40px;
-    margin-top: -50px;
+    margin-top: -50px; */
+  /* width: 100%; */
+  /* margin: 0px auto 40px; */
+  margin-top: -1vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .panels div {
-    padding: 50px;
+  /* padding: 5.7vmin; */
+  width: 11vh;
+  height: 11vh;
 }
 
 .back {
-    transform: rotateY(90deg);
-    background-image: url(../image/logo3.png);
-    background-size: 80px;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-color: #695d5f;
+  transform: rotateY(90deg);
+  background-image: url(../image/logo3.png);
+  background-size: 11vh;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #695d5f;
 }
 
 .YellowBack {
-    transform: rotateY(90deg);
+  transform: rotateY(90deg);
 }
 
 .front {
-    position: absolute;
+  position: absolute;
 }
 
 .panels li:hover div.front {
-    animation: twirl 0.2s ease-in forwards;
+  animation: twirl 0.2s ease-in forwards;
 }
 
 .panels li:hover div.back {
-    animation: twirl 0.2s 0.2s ease-out forwards reverse;
+  animation: twirl 0.2s 0.2s ease-out forwards reverse;
 }
 
 .panels li:hover div.YellowBack {
-    animation: twirl 0.2s 0.2s ease-out forwards reverse;
+  animation: twirl 0.2s 0.2s ease-out forwards reverse;
 }
-
+.center {
+  padding: 0px;
+  width: 11vh;
+  height: 11vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 @keyframes twirl {
-    0% {
-        transform: rotateY(0deg)
-    }
-    100% {
-        transform: rotateY(90deg)
-    }
+  0% {
+    transform: rotateY(0deg);
+  }
+  100% {
+    transform: rotateY(90deg);
+  }
 }
 .top {
-    text-align: center;
-    margin-bottom: 100px;
-    margin-top: 100px;
+  /* text-align: center;
+  margin-bottom: 100px;
+  margin-top: 100px; */
+  text-align: center;
+  margin: 10vh;
+}
+
+.top img {
+  width: 25vh;
+}
+.toCenter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+@media screen and (max-width: 800px) {
+  .rwdDel {
+    display: none;
+  }
+
 }
