--- a/css/menu.css
+++ b/css/menu.css
@@ -1,159 +1,168 @@
 html {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-    height: 100%;
-    background-color: #4e4343;
+  height: 100%;
+  background-color: #4e4343;
+  margin: 0;
 }
 
 .top {
-    width: 100%;
-    margin: 0 auto;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 10;
+  width: 100%;
+  top: 0%;
+  position: fixed;
+  z-index: 10;
 }
-
 
 /*meun basic*/
 
 nav {
-    margin-top: -16px;
-    background: black;
-    justify-content: space-between;
+  background: black;
+  justify-content: space-between;
+  overflow: scroll;
 }
 
 nav ul {
-    list-style-type: none;
-    padding: 0px;
-    /*flex*/
-    display: flex;
-    flex-wrap: wrap;
+  list-style-type: none;
+  display: flex;
+  /* flex-direction: row;
     justify-content: center;
+    align-items: center; */
+  padding: 0;
+  margin: 0;
 }
 
 nav a {
-    text-decoration: none;
-    text-align: center;
-    color: #fff;
-    display: block;
-    padding: 10px 30px 10px 30px;
-    font-family: 'Poiret One', cursive;
-    font-size: 18px;
+  text-decoration: none;
+  color: #fff;
+  display: block;
+  padding: 2vh 3vh;
+  font-family: "Poiret One", cursive;
+  font-size: 2.5vh;
 }
 
 nav a:hover {
-    background-color: #555;
-    text-decoration: none;
-    color: white;
+  background-color: #555;
+  text-decoration: none;
+  color: white;
 }
-
 
 /*header*/
 
 #header {
-    background-image: url(../image/menu-headerPIC.jpg);
-    height: 50%;
-    width: 100%;
-    margin-left: -10px;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    z-index: 1;
-    top: 0;
-    right: 0;
-    left: 0;
-    color: white;
-    font-size: 220px;
-    padding: 30%;
-    font-family: 'Monoton', cursive;
+  background-image: url(../image/menu-headerPIC.jpg);
+  height: 65%;
+  width: 100%;
+  background-attachment: fixed;
+  /* background-position: center; */
+  background-repeat: no-repeat;
+  color: white;
+  font-size: 7em;
+  font-family: "Monoton", cursive;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
 
 /*dishes-1*/
 
 .dishes-1 {
-    width: 1000px;
-    margin: 80px auto;
+  width: 100%;
+  margin: 5vh auto;
 }
 
-.dishes-1 ul {
-    list-style: none;
-    width: 840px;
-    margin-top: 80px;
-    margin: 0 auto;
+.dishesZone {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.dishes-1 li {
-    border: 2px solid #ffffff;
-    border-radius: 2em;
-    padding: 20px;
-    width: 800px;
-    margin-bottom: 50px;
-    font-family: "Nunito", cursive;
-    color: floralwhite;
+.dishDiv {
+  border: 2px solid #ffffff;
+  border-radius: 2em;
+  padding: 3vh;
+  width: 80%;
+  margin-bottom: 3vh;
+  font-family: "Nunito", cursive;
+  color: floralwhite;
 }
 
 .dishes-1 img {
-    width: 800px;
+  width: 100%;
 }
 
 .dishes-2 {
-    right: 0;
-    left: 0;
+  right: 0;
+  left: 0;
 }
 
 #dishes2-base {
-    background-image: url(../image/menu-5.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 800px;
-    z-index: 3;
-    right: 0;
-    left: 0;
+  background-image: url(../image/menu-5.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 80vh;
+  z-index: 3;
+  right: 0;
+  left: 0;
 }
 
 #dishes2-top {
-    z-index: 4;
-    background-color: rgba(255, 255, 255, 0.49);
-    width: 80%;
-    height: 800px;
-    margin-bottom: -800px;
-    margin-left: -80%;
-    transition: animation 0.5s;
-    -webkit-transition: animation 0.5s;
+  z-index: 4;
+  background-color: rgba(255, 255, 255, 0.49);
+  width: 80%;
+  height: 100%;
+  /* margin-bottom: -800px; */
+  margin-left: -80%;
+  transition: animation 0.5s;
+  -webkit-transition: animation 0.5s;
 }
 
 #dishes2-base:hover #dishes2-top {
-    display: block;
-    animation: slide1 1.5s forwards;
+  /* 
+  animation: slide1 1.5s;
+  animation-fill-mode: forwards; */
+  animation-name: slide1;
+  animation-duration: 1.5s;
+  animation-fill-mode: forwards;
 }
 
 @keyframes slide1 {
-    100% {
-        margin-left: 0%
-    }
+  /* 0% {
+    margin-left: -80%;
+  } */
+  100% {
+    margin-left: 0%;
+  }
 }
 
 .p1 {
-    font-family: 'Monoton', sans-serif;
-    color: white;
-    font-size: 80px;
+  font-family: "Monoton", sans-serif;
+  color: white;
+  font-size: 5vh;
 }
 
 .p2 {
-    font-family: 'Nunito', sans-serif;
-    color: white;
-    font-size: 20px;
+  font-family: "Nunito", sans-serif;
+  color: white;
+  font-size: 2vh;
 }
 
 .pp {
-    width: 500px;
-    padding: 80px;
-    padding-left: 450px;
+  padding-left: 35%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+@media screen and (min-width: 768px) {
+  nav ul {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 }
